feat: user auth & restaurant history
